--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.1"
+    "@heroui/card": "^2.2.22",
+    "@heroui/react": "^2.8.0",
+    "@heroui/spinner": "^2.2.20",
+    "@tanstack/react-query": "^4.40.1",
+    "axios": "^1.10.0",
+    "dotenv": "^17.2.0",
+    "framer-motion": "^12.23.6",
+    "next": "15.4.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
